css/pane_tab_content.css
/* ... */
.oblogger-content .child-item {
    border-radius: var(--radius-s);
    color: var(--nav-item-color);
    display: grid;
    font-size: small;
    justify-content: start;
    line-height: initial;
    margin: 2px 0;
    padding: 4px;
}

.oblogger-content .child-item-icon {
    grid-column: 1;
    padding: 0 4px 0 0;
    pointer-events: none;
}

.oblogger-content .child-item-content { display: flex; }

.oblogger-content .child-item-text {
    align-items: center;
    display: flex;
    grid-column: 2;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.oblogger-content .bookmark-icon {
    display: flex;
    grid-column: 3;
    padding-left: 2px;
}

.oblogger-content .nav-file-tag {
    background-color: var(--background-modifier-hover);
    border-radius: 4px;
    font-weight: 600;
    grid-column: 4;
    margin: 0 0 0 4px;
    padding: 0 4px;
    text-transform: uppercase;
}

.oblogger-content .family-content.collapsed,
.oblogger-content .content.collapsed {
    max-height: 0;
    overflow: hidden;
    transition-duration: 0.1s;
    transition-timing-function: cubic-bezier(0.02, 0.01, 0.47, 1);
}

.oblogger-content .content {
    padding: 0 0 4px 12px;
    transition-duration: 0.1s;
    transition-timing-function: cubic-bezier(0.02, 0.01, 0.47, 1);
}

.oblogger-content .content.collapsed { display: none; }

/* GREETER =============================================================== */

.greeter-title {
    align-items: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.greeter-dot-container {
    height: 72px;
    margin: 4px 0 8px;
    position: relative;
    transform: translateX(50%) translateY(50%);
    width: 72px;
}

.greeter-title-default-avatar {
    align-items: center;
    background-color: hsla(240deg 15% 17%/60%);
    border-radius: 40px;
    color: hsla(var(--accent-h) var(--accent-s) var(--accent-l)/90%);
    display: flex;
    font-family: sans-serif;
    font-size: 53px;
    font-weight: 800;
    height: 68px;
    justify-content: center;
    padding-top: 4px;
    position: absolute;
    transform: translateX(-50%) translateY(-50%);
    width: 68px;
}

.greeter-title-avatar-changer {
    align-items: center;
    background-color: rgba(0 0 0/60%);
    border-radius: 44px;
    display: flex;
    height: 68px;
    justify-content: center;
    opacity: 0;
    position: absolute;
    transform: translateX(-50%) translateY(-50%);
    transition: 0.3s;
    width: 68px;
    z-index: 10;
}

.greeter-title-avatar-changer-label {
    color: var(--nav-item-color);
    font-weight: bold;
    position: relative;
    zoom: 85%;
}

.greeter-title-avatar {
    background-color: #000;
    border-radius: 44px;
    height: 68px;
    position: absolute;
    transform: translateX(-50%) translateY(-50%);
    width: 68px;
    z-index: 9;

    /* noinspection Stylelint */
    -webkit-background-clip: content-box;
}

.greeter-title-avatar-border {
    background-color: hsla(var(--accent-h) var(--accent-s) var(--accent-l)/90%);
    border-radius: 44px;
    height: 72px;
    position: absolute;
    transform: translateX(-50%) translateY(-50%);
    width: 72px;
    z-index: -9;
}

.greeter-vault-name {
    color: var(--vault-name-color);
    cursor: default;
    display: flex;
    font-size: var(--vault-name-font-size);
    font-weight: var(--vault-name-font-weight);
    justify-content: center;
    margin: 0 auto 4px;
    position: relative;
    width: fit-content;
    z-index: 11;
}

.greeter-clock {
    align-items: center;
    display: flex;
    font-family: var(--font-monospace);
    justify-content: center;
    margin-bottom: 4px;
}

.greeter-clock .date,
.greeter-clock .time {
    color: var(--vault-name-color);
    cursor: default;
    font-size: .7em;
    padding: 0 4px;
    z-index: 11;
}

.greeter-clock .date::after {
    content: "-";
    padding-left: 6px;
}

/* ==========================================================================
   SVG
   ==========================================================================
*/

.oblogger-content .svg-icon {
    color: var(--nav-item-color);
    transition: transform 100ms ease-in-out;
}

.oblogger-pill-menu-icon .svg-icon {
    color: hsla(var(--accent-h) var(--accent-s) var(--accent-l)/90%);
    height: 12px;
    width: 12px;
}

.oblogger-content .title-tag .svg-icon {
    color: var(--nav-item-color);
    height: 11px;
    width: 11px;
}

.oblogger-content .text-icon .svg-icon {
    color: var(--nav-item-color);
    height: 12px;
    width: 12px;
}

.oblogger-content .child-folder-icon .svg-icon {
    height: 16px;
    width: 16px;
}

.oblogger-content .status-icon .svg-icon {
    color: var(--background-secondary);
    fill: var(--vault-name-color);
    height: 8px;
    stroke-width: 6px;
    z-index: 1;
}

.oblogger-content .child-item-icon .svg-icon {
    height: 16px;
    width: 16px;
}

.oblogger-content .bookmark-icon svg.svg-icon {
    fill: var(--nav-indentation-guide-color);
    color: transparent;
    height: 16px;
    width: 12px;
}

.oblogger-content .rx-child .collapsed .svg-icon:not(.content .svg-icon),
.oblogger-content .title-container.collapsed .svg-icon:not(.oblogger-content .text-icon svg.svg-icon) { transform: rotate(-90deg); }


/* ==========================================================================
   HOVER AND ACTIVE
   ==========================================================================
*/

.oblogger-content .greeter-vault-name:active { animation: wiggle 0.2s; }

.oblogger-content .title-tag:hover,
.oblogger-content .title-tag:hover .svg-icon {
    color: var(--accent-color);
    opacity: 1;
}

.oblogger-content .separator:active,
.oblogger-content .title-tag.wiggle:active { animation: wiggle 0.2s; }
/* ... */

